--- a/html/main.html
+++ b/html/main.html
@@ -7,6 +7,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
+<div class="container">
 <div class="header row"><div class="col-sm-6"><h1>Teal</h1></div>
     <div class="col-sm-6 " style="text-align: right"> Hi, Allen!
         <button><img alt="Smiley face" height="64" width="64" src="../resource/allen_profile.jpg"/></button>
@@ -17,34 +18,36 @@
 
             <ul  class="list-group">
                 <li class="list-group-item row">
-                    <div class="d-flex w-100 justify-content-between">
+                    <div class="d-flex w-100 justify-content-around">
                         <button>Ongoing</button>
-                        <button>Completed</button>
+                        <button disabled="true">Completed</button>
                     </div>
                 </li>
                 <li class="list-group-item row">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1">Item</h5>
                         <small>3 hrs</small>
+                        <button> complete </button>
                     </div>
                 </li>
                 <li class="list-group-item row">
                     <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1">Item</h5>
                         <small>1 hr</small>
+                        <button> complete </button>
                     </div>
                 </li>
                 <li class="list-group-item row">
-                    <div class="d-flex w-100 justify-content-between">
-                        <button>+</button>
+                    <div class="d-flex w-100 justify-content-around">
+                        <button style="width:100%;font-size: large;">+</button>
                     </div>
                 </li>
             </ul>
         </div>
     <div class="mentalManage col-sm-6">
         <div>
-        <div class="d-flex w-100 justify-content-between">
-        <h2>Feel free to take a break :)</h2>
+        <div class="d-flex w-100 justify-content-start">
+        <h2>Feel free to take a break. </h2>
             <button>?</button>
         </div>
         <div class="progress">
@@ -61,9 +64,11 @@
         <div>
             <h2>Daily Trends</h2>
             <canvas id="lineChart"></canvas>
+            <button><a href="chat.html">Have a quick chat with Dr.Dow</a></button>
         </div>
     </div>
 
     </div>
+</div>
 </body>
 </html>
