task list toggling finished

--- a/html/addTask.html
+++ b/html/addTask.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <div class="container">
+        <header class="bar align-self-start">
+            <button><a href="main.html">back</a></button>
+        </header>
+        <div class="row">
+        <div class="col-6">
         <div class=" align-self-start">
             <h3>Task Name</h3>
         <input type="text" class="form-control" placeholder="Type here..." aria-label="Type here..." aria-describedby="basic-addon2">
@@ -17,8 +22,15 @@
         </div>
         <div class="align-content-lg-between">
                 <button><a href="main.html">add</a></button>
-                <button><a href="main.html">cancel</a></button>
         </div>
+    </div>
+        <div class="col-6" style="align-items: center">
+            <div>
+                <h3>Sync Tasks from Google Calender</h3>
+            </div>
+            <button> SYNC </button>
+        </div>
+    </div>
     </div>
 
 </body>
