--- a/html/addTask.html
+++ b/html/addTask.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <header class="bar align-self-start">
-            <button><a href="main.html">back</a></button>
+            <button><a href="../index.html">back</a></button>
         </header>
         <div class="row">
         <div class="col-6">
@@ -21,7 +21,7 @@
             <input type="number" class="form-control" placeholder="in minutes" aria-label="In minutes" aria-describedby="basic-addon2">
         </div>
         <div class="align-content-lg-between">
-                <button><a href="main.html">add</a></button>
+                <button><a href="../index.html">add</a></button>
         </div>
     </div>
         <div class="col-6" style="align-items: center">
