--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Main - </title>
-    <link href="../css/main.css" rel="stylesheet"/>
-    <link href="../css/bootstrap.min.css" rel="stylesheet"/>
-    <script src="../js/jquery-3.3.1.min.js"></script>
+    <link href="css/main.css" rel="stylesheet"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="js/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 
@@ -13,7 +13,7 @@
 
 <div class="header row"><div class="col-sm-6"><h1>Teal</h1></div>
     <div class="col-sm-6 " style="text-align: right"> Hi, Allen!
-        <button><img alt="Smiley face" height="64" width="64" src="../resource/allen_profile.jpg"/></button>
+        <button><img alt="Smiley face" height="64" width="64" src="resource/allen_profile.jpg"/></button>
     </div>
     </div>
 <div class="container-fluid row">
@@ -52,7 +52,7 @@
                 </li>
                 <li class="list-group-item ongoing row">
                     <div class="d-flex w-100 justify-content-around">
-                        <button style="width:100%;font-size: large;" onclick="window.location.href='/Teal/html/addTask.html'">+</button>
+                        <button style="width:100%;font-size: large;" onclick="window.location.href='/html/addTask.html'">+</button>
                     </div>
                 </li>
             </ul>
@@ -78,12 +78,12 @@
         <div>
             <h2>Daily Trends</h2>
             <canvas id="lineChart"></canvas>
-            <button><a href="chat.html">Have a quick chat with Dr.Dow</a></button>
+            <button><a href="html/chat.html">Have a quick chat with Dr.Dow</a></button>
         </div>
     </div>
 
     </div>
 </div>
-<script src="../js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
