--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="header row"><div class="col-sm-6"><h1>Teal</h1></div>
     <div class="col-sm-6 " style="text-align: right"> Hi, Allen!
-        <button><img alt="Smiley face" height="64" width="64" src="resource/allen_profile.jpg"/></button>
+        <button><a href="html/profile.html"><img alt="Smiley face" height="64" width="64" src="resource/allen_profile.jpg"/></a></button>
     </div>
     </div>
 <div class="container-fluid row">
@@ -52,7 +52,7 @@
                 </li>
                 <li class="list-group-item ongoing row">
                     <div class="d-flex w-100 justify-content-around">
-                        <button style="width:100%;font-size: large;" onclick="window.location.href='/html/addTask.html'">+</button>
+                        <button style="width:auto;font-size: large;"><a href="html/addTask.html">add task + </a></button>
                     </div>
                 </li>
             </ul>
@@ -77,8 +77,8 @@
         </div>
         <div>
             <h2>Daily Trends</h2>
-            <canvas id="lineChart"></canvas>
-            <button><a href="html/chat.html">Have a quick chat with Dr.Dow</a></button>
+            <img src="resource/mental_chart.png" alt="Smiley face" height="264" id="lineChart"/>
+            <button><a href="html/chat.html">Chat with Your Therapist</a></button>
         </div>
     </div>
 
