--- a/html/chat.html
+++ b/html/chat.html
@@ -13,8 +13,14 @@
         <button><a href="../index.html">back</a></button>
     </header>
         <div id="chatBox" class="chatBox">
-            <div class="container message doc"><span>Hi, how are you feeling?</span></div>
-            <div class=" container message user"><span>I have too much homework to do. I am feeling stressed out:(</span></div>
+            <div class="container message doc">
+                <img src="../resource/threapist.jpg" height="32" width="32" alt="therapist_pic"/>
+                <span>Hi, how are you feeling?</span>
+            </div>
+            <div class=" container message user">
+                <span>I have too much homework to do. I am feeling stressed out:(</span>
+                <img src="../resource/allen_profile.jpg" height="32" width="32" alt="user"/>
+            </div>
         </div>
         <div class="input-group mb-3 align-self-end">
             <input type="text" class="form-control" id="msg" placeholder="" aria-label="Type here..." aria-describedby="basic-addon2">
