--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div>
         <div class="d-flex w-100 justify-content-start">
         <h2>Feel free to take a break. </h2>
-            <button>?</button>
+            <button> <a href="html/explaination.html">?</a></button>
 
         </div>
         <div class="progress">
