fix a bug on refreshing

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </li>
                 <li type="button" data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session"
                     data-date="November 10, 2018" data-description="Regular session with Dr.Dow."
-                    class=" rounded list-group-item row ongoing task card flex-md-row mb-4 shadow-sm upcoming">
+                    class="vis rounded list-group-item row ongoing task card flex-md-row mb-4 shadow-sm upcoming">
                     <div class=" d-flex w-100  card-body d-flex flex-column ">
                         <h4 class="mb-1">November 10, 2018</h4>
                         <p>17:00pm</p>
@@ -54,7 +54,7 @@
                 </li>
                 <li type="button" data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session"
                     data-date="November 19, 2018" data-description="Regular session with Dr.Dow + Feedback on new stress-relief method."
-                    class="rounded list-group-item row ongoing task card flex-md-row mb-4 shadow-sm">
+                    class="vis rounded list-group-item row ongoing task card flex-md-row mb-4 shadow-sm">
                     <div class="d-flex w-100 card-body d-flex flex-column ">
                         <h4 class="mb-1">November 19, 2018</h4>
                         <p>17:00pm</p>
