fix a chrome type error

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <button class="btn btn-lg same_back inactive_btn" id="completed">Past</button>
                     </div>
                 </li>
-                <li type="button" data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session"
+                <li data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session"
                     data-date="November 10, 2018" data-description="Regular session with Dr.Dow."
                     class="vis rounded list-group-item row ongoing task card flex-md-row mb-4 shadow-sm upcoming">
                     <div class=" d-flex w-100  card-body d-flex flex-column ">
@@ -52,7 +52,7 @@
                         <!--<button class="completed finishbtn"> undo </button>-->
                     </div>
                 </li>
-                <li type="button" data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session"
+                <li data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session"
                     data-date="November 19, 2018" data-description="Regular session with Dr.Dow + Feedback on new stress-relief method."
                     class="vis rounded list-group-item row ongoing task card flex-md-row mb-4 shadow-sm">
                     <div class="d-flex w-100 card-body d-flex flex-column ">
@@ -62,7 +62,7 @@
                         <!--<button class="completed finishbtn"> undo </button>-->
                     </div>
                 </li>
-                <li type="button" data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session"
+                <li data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session"
                     data-date="December 4, 2018" data-description="Regular session with Dr.Dow."
                     class="rounded list-group-item row ongoing task card flex-md-row mb-4 shadow-sm " id="new_task">
                     <div class="d-flex w-100 card-body d-flex flex-column ">
@@ -72,7 +72,7 @@
                         <!--<button class="completed finishbtn"> undo </button>-->
                     </div>
                 </li>
-                <li type="button" data-toggle="modal" data-target="#exampleModal" data-pass="Past Session" data-date="November 2, 2018"
+                <li data-toggle="modal" data-target="#exampleModal" data-pass="Past Session" data-date="November 2, 2018"
                     data-description="Allen is doing better everyday. Glad to know that he becomes more productive at work."
                     class=" rounded list-group-item row completed task card flex-md-row mb-4 shadow-sm h-md-250 gray_back">
                     <div class="d-flex w-100 justify-content-between card-body d-flex flex-column align-items-start">
