log in finished

--- a/html/chat.html
+++ b/html/chat.html
@@ -10,7 +10,7 @@
 <body>
 <div  class="container">
     <header class="bar align-self-start">
-        <button><a href="../index.html">back</a></button>
+        <button><a href="main.html">back</a></button>
     </header>
         <div id="chatBox" class="chatBox">
             <div class="container message doc">
