--- a/html/explaination.html
+++ b/html/explaination.html
@@ -8,7 +8,7 @@
 <body>
 <div  class="container">
     <header class="bar align-self-start">
-        <button><a href="../index.html">back</a></button>
+        <button><a href="main.html">back</a></button>
     </header>
     <h1>
         The Relief Score
