--- a/html/profile.html
+++ b/html/profile.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <header class="bar align-self-start">
-        <button><a href="../index.html">back</a></button>
+        <button><a href="main.html">back</a></button>
     </header>
     <div class="align-self-between" style="display: block">
         <img alt="Smiley face" height="256" width="256" src="../resource/allen_profile.jpg"/>
